# llama.cpp-turboquant-hip

./: .gitignore  PFLASH_PHASES.md  README.md  SESSION_NOTES.md  TURBOQUANT.md  convert_hf_to_gguf.py  sweep_pflash.sh  sweep_v2_results.csv
tools/niah/: CMakeLists.txt  aggregate_results.py  gen_code_fixtures.py  gen_fixtures.py  gen_question_fixtures.py  niah.cpp  niah_100k.jsonl  niah_128k.jsonl  niah_16384_multi.jsonl  niah_20k.jsonl  niah_25600_multi.jsonl  niah_25k.jsonl  niah_32768_multi.jsonl  niah_40k.jsonl  niah_50k.jsonl  niah_80k.jsonl  pack_code_context.py  pflash.cpp  questions.yaml  run_phase11.sh  run_phase6c.sh  run_phase7.sh  run_phase7_multitrial.sh  run_q.sh  run_tier.sh  score_correlation.py  targeted_baseline.py  test_bsa.cpp
tools/niah/contexts/: A1_pos-early.txt  A1_pos-late.txt  A1_pos-mid.txt  A2_pos-mid.txt  A3_pos-early.txt  A3_pos-late.txt  A3_pos-mid.txt  A4_pos-early.txt  A4_pos-late.txt  A4_pos-mid.txt  A5_pos-early.txt  A5_pos-late.txt  B1_64k_padded.txt  B1_pos-early.txt  B1_pos-late.txt  B1_pos-mid.txt  B2_pos-early.txt  B2_pos-late.txt  B2_pos-mid.txt  B3_pos-early.txt  B3_pos-late.txt  B3_pos-mid.txt  B4_pos-early.txt  B4_pos-late.txt  B4_pos-mid.txt  B5_pos-early.txt  B5_pos-late.txt  B5_pos-mid.txt  B6_pos-early.txt  B6_pos-late.txt  B6_pos-mid.txt  C1_pos-early.txt  C1_pos-late.txt  C1_pos-mid.txt  C2_pos-early.txt  C2_pos-late.txt  C2_pos-mid.txt  C3_pos-early.txt  C3_pos-late.txt  C3_pos-mid.txt  (+22 more)
tools/niah/fixtures/: A1_pos-early.jsonl  A1_pos-late.jsonl  A1_pos-mid.jsonl  A2_pos-early.jsonl  A2_pos-late.jsonl  A2_pos-mid.jsonl  A3_pos-early.jsonl  A3_pos-late.jsonl  (+59 more)
(+595 files in other folders)
